--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "geohash-benchmark",
   "version": "0.9.0",
   "description": "Geohashing benchmark project",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "scripts": {
+    "build": "tsc --build tsconfig.json",
+    "run": "node -r esm dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +21,18 @@
   "bugs": {
     "url": "https://github.com/eduelias/geohashing-benchmark/issues"
   },
-  "homepage": "https://github.com/eduelias/geohashing-benchmark#readme"
+  "homepage": "https://github.com/eduelias/geohashing-benchmark#readme",
+  "dependencies": {
+    "@types/latlon-geohash": "^2.0.0",
+    "@types/ngeohash": "^0.6.2",
+    "benny": "^3.6.15",
+    "esm": "^3.2.25",
+    "esm-ts-node": "^1.0.7",
+    "geohash": "0.0.1",
+    "latlon-geohash": "^2.0.0",
+    "ngeohash": "^0.6.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
+  }
 }
