--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "tsc --build tsconfig.json",
-    "run": "node -r esm dist/index.js",
+    "it": "node -r esm dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
